# malloc-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: align.rs  lib.rs
tests/: align.rs  mem.rs
