[package]
name = "malloc-rust"
version = "1.0.0-beta.1"
edition = "2018"
description = "Implementation of xxhash"
readme = "README.md"
repository = "https://github.com/DoumanAsh/xxhash-rust"
license = "BSL-1.0"
keywords = ["malloc", "allocator"]
categories = ["no-std", "memory-management"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
