[package]
name = "malloc-rust"
version = "1.0.0-beta.3"
edition = "2018"
description = "Malloc implementation using Rust allocator"
readme = "README.md"
repository = "https://github.com/DoumanAsh/malloc-rust"
license = "BSL-1.0"
keywords = ["malloc", "allocator"]
categories = ["no-std", "memory-management"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
